Documents/Exemple ANTLR/vslParser.java
// $ANTLR 3.1.3 Mar 18, 2009 10:09:25 vsl.g 2009-11-02 17:54:34

//import java.util.*; //conflict with BitSet


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class vslParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IMAGINERY_TOKEN", "PROG", "CORPS", "FCALL_S", "BLOCK", "FCALL", "ARDEC", "PARAM", "ARRAY", "ARELEM", "INST", "DEC", "FUNC_KW", "IDENT", "PG", "PD", "PROTO_KW", "INT_KW", "VOID_KW", "VIRG", "CG", "CD", "ASSIGN_KW", "RETURN_KW", "PRINT_KW", "READ_KW", "IF_KW", "THEN_KW", "ELSE_KW", "FI_KW", "WHILE_KW", "DO_KW", "OD_KW", "AG", "AD", "PLUS", "MOINS", "MUL", "DIV", "INTEGER", "TEXT", "WS", "COMMENT", "LETTER", "DIGIT", "ASCII"
    };
    public static final int DEC=15;
    public static final int LETTER=47;
    public static final int OD_KW=36;
    public static final int PARAM=11;
    public static final int EOF=-1;
    public static final int INT_KW=21;
    public static final int INST=14;
    public static final int MOINS=40;
    public static final int PROG=5;
    public static final int RETURN_KW=27;
    public static final int IMAGINERY_TOKEN=4;
    public static final int ARELEM=13;
    public static final int ARDEC=10;
    public static final int IF_KW=30;
    public static final int VIRG=23;
    public static final int AD=38;
    public static final int IDENT=17;
    public static final int PLUS=39;
    public static final int FI_KW=33;
    public static final int AG=37;
    public static final int DIGIT=48;
    public static final int ASSIGN_KW=26;
    public static final int COMMENT=46;
    public static final int ARRAY=12;
    public static final int READ_KW=29;
    public static final int INTEGER=43;
    public static final int FCALL=9;
    public static final int DO_KW=35;
    public static final int FUNC_KW=16;
    public static final int ELSE_KW=32;
    public static final int TEXT=44;
    public static final int MUL=41;
    public static final int THEN_KW=31;
    public static final int WS=45;
    public static final int PROTO_KW=20;
    public static final int WHILE_KW=34;
    public static final int CORPS=6;
    public static final int BLOCK=8;
    public static final int ASCII=49;
    public static final int FCALL_S=7;
    public static final int CG=24;
    public static final int CD=25;
    public static final int DIV=42;
    public static final int PD=19;
    public static final int PRINT_KW=28;
    public static final int PG=18;
    public static final int VOID_KW=22;

    // delegates
    // delegators


        public vslParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public vslParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return vslParser.tokenNames; }
    public String getGrammarFileName() { return "vsl.g"; }


    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // vsl.g:34:1: program : ( unite )+ -> ^( PROG ( unite )+ ) ;
    public final vslParser.program_return program() throws RecognitionException {
        vslParser.program_return retval = new vslParser.program_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        vslParser.unite_return unite1 = null;


        RewriteRuleSubtreeStream stream_unite=new RewriteRuleSubtreeStream(adaptor,"rule unite");
        try {
            // vsl.g:34:10: ( ( unite )+ -> ^( PROG ( unite )+ ) )
            // vsl.g:34:12: ( unite )+
            {
            // vsl.g:34:12: ( unite )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==FUNC_KW||LA1_0==PROTO_KW) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // vsl.g:34:12: unite
            	    {
            	    pushFollow(FOLLOW_unite_in_program147);
            	    unite1=unite();

            	    state._fsp--;

            	    stream_unite.add(unite1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);



            // AST REWRITE
            // elements: unite
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 35:17: -> ^( PROG ( unite )+ )
            {
                // vsl.g:35:20: ^( PROG ( unite )+ )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PROG, "PROG"), root_1);

                if ( !(stream_unite.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_unite.hasNext() ) {
                    adaptor.addChild(root_1, stream_unite.nextTree());

                }
                stream_unite.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class unite_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "unite"
    // vsl.g:38:1: unite : ( function | proto );
    public final vslParser.unite_return unite() throws RecognitionException {
        vslParser.unite_return retval = new vslParser.unite_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        vslParser.function_return function2 = null;

        vslParser.proto_return proto3 = null;



        try {
            // vsl.g:38:7: ( function | proto )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==FUNC_KW) ) {
                alt2=1;
            }
            else if ( (LA2_0==PROTO_KW) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // vsl.g:38:9: function
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_function_in_unite185);
                    function2=function();

                    state._fsp--;

                    adaptor.addChild(root_0, function2.getTree());

                    }
                    break;
                case 2 :
                    // vsl.g:39:5: proto
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_proto_in_unite191);
                    proto3=proto();

                    state._fsp--;

                    adaptor.addChild(root_0, proto3.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "unite"

    public static class function_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "function"
    // vsl.g:42:1: function : FUNC_KW type IDENT PG param_list PD statement -> ^( FUNC_KW type IDENT param_list ^( CORPS statement ) ) ;
    public final vslParser.function_return function() throws RecognitionException {
        vslParser.function_return retval = new vslParser.function_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token FUNC_KW4=null;
        Token IDENT6=null;
        Token PG7=null;
        Token PD9=null;
        vslParser.type_return type5 = null;

        vslParser.param_list_return param_list8 = null;

        vslParser.statement_return statement10 = null;


        CommonTree FUNC_KW4_tree=null;
        CommonTree IDENT6_tree=null;
        CommonTree PG7_tree=null;
        CommonTree PD9_tree=null;
        RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_PD=new RewriteRuleTokenStream(adaptor,"token PD");
        RewriteRuleTokenStream stream_PG=new RewriteRuleTokenStream(adaptor,"token PG");
        RewriteRuleTokenStream stream_FUNC_KW=new RewriteRuleTokenStream(adaptor,"token FUNC_KW");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        RewriteRuleSubtreeStream stream_param_list=new RewriteRuleSubtreeStream(adaptor,"rule param_list");
        try {
            // vsl.g:42:10: ( FUNC_KW type IDENT PG param_list PD statement -> ^( FUNC_KW type IDENT param_list ^( CORPS statement ) ) )
            // vsl.g:42:12: FUNC_KW type IDENT PG param_list PD statement
            {
            FUNC_KW4=(Token)match(input,FUNC_KW,FOLLOW_FUNC_KW_in_function202);  
            stream_FUNC_KW.add(FUNC_KW4);

            pushFollow(FOLLOW_type_in_function204);
            type5=type();

            state._fsp--;

            stream_type.add(type5.getTree());
            IDENT6=(Token)match(input,IDENT,FOLLOW_IDENT_in_function206);  
            stream_IDENT.add(IDENT6);

            PG7=(Token)match(input,PG,FOLLOW_PG_in_function208);  
            stream_PG.add(PG7);

            pushFollow(FOLLOW_param_list_in_function210);
            param_list8=param_list();

            state._fsp--;

            stream_param_list.add(param_list8.getTree());
            PD9=(Token)match(input,PD,FOLLOW_PD_in_function212);  
            stream_PD.add(PD9);

            pushFollow(FOLLOW_statement_in_function214);
            statement10=statement();

            state._fsp--;

            stream_statement.add(statement10.getTree());


            // AST REWRITE
            // elements: statement, type, param_list, IDENT, FUNC_KW
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 43:17: -> ^( FUNC_KW type IDENT param_list ^( CORPS statement ) )
            {
                // vsl.g:43:20: ^( FUNC_KW type IDENT param_list ^( CORPS statement ) )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_FUNC_KW.nextNode(), root_1);

                adaptor.addChild(root_1, stream_type.nextTree());
                adaptor.addChild(root_1, stream_IDENT.nextNode());
                adaptor.addChild(root_1, stream_param_list.nextTree());
                // vsl.g:43:52: ^( CORPS statement )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(CORPS, "CORPS"), root_2);

                adaptor.addChild(root_2, stream_statement.nextTree());

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "function"

    public static class proto_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "proto"
    // vsl.g:47:1: proto : PROTO_KW type IDENT PG param_list PD ;
    public final vslParser.proto_return proto() throws RecognitionException {
        vslParser.proto_return retval = new vslParser.proto_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token PROTO_KW11=null;
        Token IDENT13=null;
        Token PG14=null;
        Token PD16=null;
        vslParser.type_return type12 = null;

        vslParser.param_list_return param_list15 = null;


        CommonTree PROTO_KW11_tree=null;
        CommonTree IDENT13_tree=null;
        CommonTree PG14_tree=null;
        CommonTree PD16_tree=null;

        try {
            // vsl.g:47:8: ( PROTO_KW type IDENT PG param_list PD )
            // vsl.g:47:11: PROTO_KW type IDENT PG param_list PD
            {
            root_0 = (CommonTree)adaptor.nil();

            PROTO_KW11=(Token)match(input,PROTO_KW,FOLLOW_PROTO_KW_in_proto262); 
            PROTO_KW11_tree = (CommonTree)adaptor.create(PROTO_KW11);
            root_0 = (CommonTree)adaptor.becomeRoot(PROTO_KW11_tree, root_0);

            pushFollow(FOLLOW_type_in_proto265);
            type12=type();

            state._fsp--;

            adaptor.addChild(root_0, type12.getTree());
            IDENT13=(Token)match(input,IDENT,FOLLOW_IDENT_in_proto267); 
            IDENT13_tree = (CommonTree)adaptor.create(IDENT13);
            adaptor.addChild(root_0, IDENT13_tree);

            PG14=(Token)match(input,PG,FOLLOW_PG_in_proto269); 
            pushFollow(FOLLOW_param_list_in_proto272);
            param_list15=param_list();

            state._fsp--;

            adaptor.addChild(root_0, param_list15.getTree());
            PD16=(Token)match(input,PD,FOLLOW_PD_in_proto274); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "proto"

    public static class type_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "type"
    // vsl.g:50:1: type : ( INT_KW | VOID_KW );
    public final vslParser.type_return type() throws RecognitionException {
        vslParser.type_return retval = new vslParser.type_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token INT_KW17=null;
        Token VOID_KW18=null;

        CommonTree INT_KW17_tree=null;
        CommonTree VOID_KW18_tree=null;

        try {
            // vsl.g:50:7: ( INT_KW | VOID_KW )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==INT_KW) ) {
                alt3=1;
            }
            else if ( (LA3_0==VOID_KW) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // vsl.g:50:9: INT_KW
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    INT_KW17=(Token)match(input,INT_KW,FOLLOW_INT_KW_in_type287); 
                    INT_KW17_tree = (CommonTree)adaptor.create(INT_KW17);
                    root_0 = (CommonTree)adaptor.becomeRoot(INT_KW17_tree, root_0);


                    }
                    break;
                case 2 :
                    // vsl.g:51:5: VOID_KW
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    VOID_KW18=(Token)match(input,VOID_KW,FOLLOW_VOID_KW_in_type295); 
                    VOID_KW18_tree = (CommonTree)adaptor.create(VOID_KW18);
                    root_0 = (CommonTree)adaptor.becomeRoot(VOID_KW18_tree, root_0);


                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "type"

    public static class param_list_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "param_list"
    // vsl.g:54:1: param_list : ( param ( VIRG param )* -> ^( PARAM ( param )+ ) | -> ^( PARAM ) );
    public final vslParser.param_list_return param_list() throws RecognitionException {
        vslParser.param_list_return retval = new vslParser.param_list_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token VIRG20=null;
        vslParser.param_return param19 = null;

        vslParser.param_return param21 = null;


        CommonTree VIRG20_tree=null;
        RewriteRuleTokenStream stream_VIRG=new RewriteRuleTokenStream(adaptor,"token VIRG");
        RewriteRuleSubtreeStream stream_param=new RewriteRuleSubtreeStream(adaptor,"rule param");
        try {
            // vsl.g:54:12: ( param ( VIRG param )* -> ^( PARAM ( param )+ ) | -> ^( PARAM ) )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==IDENT) ) {
                alt5=1;
            }
            else if ( (LA5_0==PD) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // vsl.g:54:14: param ( VIRG param )*
                    {
                    pushFollow(FOLLOW_param_in_param_list307);
                    param19=param();

                    state._fsp--;

                    stream_param.add(param19.getTree());
                    // vsl.g:54:20: ( VIRG param )*
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==VIRG) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // vsl.g:54:22: VIRG param
                    	    {
                    	    VIRG20=(Token)match(input,VIRG,FOLLOW_VIRG_in_param_list311);  
                    	    stream_VIRG.add(VIRG20);

                    	    pushFollow(FOLLOW_param_in_param_list313);
                    	    param21=param();

                    	    state._fsp--;

                    	    stream_param.add(param21.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);



                    // AST REWRITE
                    // elements: param
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 55:17: -> ^( PARAM ( param )+ )
                    {
                        // vsl.g:55:20: ^( PARAM ( param )+ )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PARAM, "PARAM"), root_1);

                        if ( !(stream_param.hasNext()) ) {
                            throw new RewriteEarlyExitException();
                        }
                        while ( stream_param.hasNext() ) {
                            adaptor.addChild(root_1, stream_param.nextTree());

                        }
                        stream_param.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // vsl.g:56:5: 
                    {

                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 56:5: -> ^( PARAM )
                    {
                        // vsl.g:56:8: ^( PARAM )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PARAM, "PARAM"), root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "param_list"

    public static class param_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "param"
    // vsl.g:59:1: param : ( IDENT | IDENT CG CD -> ^( ARRAY IDENT ) );
    public final vslParser.param_return param() throws RecognitionException {
        vslParser.param_return retval = new vslParser.param_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IDENT22=null;
        Token IDENT23=null;
        Token CG24=null;
        Token CD25=null;

        CommonTree IDENT22_tree=null;
        CommonTree IDENT23_tree=null;
        CommonTree CG24_tree=null;
        CommonTree CD25_tree=null;
        RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_CG=new RewriteRuleTokenStream(adaptor,"token CG");
        RewriteRuleTokenStream stream_CD=new RewriteRuleTokenStream(adaptor,"token CD");

        try {
            // vsl.g:59:8: ( IDENT | IDENT CG CD -> ^( ARRAY IDENT ) )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==IDENT) ) {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==CG) ) {
                    alt6=2;
                }
                else if ( (LA6_1==PD||LA6_1==VIRG) ) {
                    alt6=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // vsl.g:59:10: IDENT
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    IDENT22=(Token)match(input,IDENT,FOLLOW_IDENT_in_param363); 
                    IDENT22_tree = (CommonTree)adaptor.create(IDENT22);
                    adaptor.addChild(root_0, IDENT22_tree);


                    }
                    break;
                case 2 :
                    // vsl.g:60:12: IDENT CG CD
                    {
                    IDENT23=(Token)match(input,IDENT,FOLLOW_IDENT_in_param376);  
                    stream_IDENT.add(IDENT23);

                    CG24=(Token)match(input,CG,FOLLOW_CG_in_param378);  
                    stream_CG.add(CG24);

                    CD25=(Token)match(input,CD,FOLLOW_CD_in_param380);  
                    stream_CD.add(CD25);



                    // AST REWRITE
                    // elements: IDENT
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 61:17: -> ^( ARRAY IDENT )
                    {
                        // vsl.g:61:20: ^( ARRAY IDENT )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(ARRAY, "ARRAY"), root_1);

                        adaptor.addChild(root_1, stream_IDENT.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "param"

    public static class statement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement"
    // vsl.g:64:1: statement : ( IDENT ASSIGN_KW expression | tab_elem ASSIGN_KW expression -> ^( ASSIGN_KW tab_elem expression ) | RETURN_KW expression | PRINT_KW print_list | READ_KW read_list | IF_KW expression THEN_KW statement ( ELSE_KW statement )? FI_KW | WHILE_KW expression DO_KW statement OD_KW | IDENT PG ( argument_list )? PD -> ^( FCALL_S IDENT ( argument_list )? ) | block );
    public final vslParser.statement_return statement() throws RecognitionException {
        vslParser.statement_return retval = new vslParser.statement_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IDENT26=null;
        Token ASSIGN_KW27=null;
        Token ASSIGN_KW30=null;
        Token RETURN_KW32=null;
        Token PRINT_KW34=null;
        Token READ_KW36=null;
        Token IF_KW38=null;
        Token THEN_KW40=null;
        Token ELSE_KW42=null;
        Token FI_KW44=null;
        Token WHILE_KW45=null;
        Token DO_KW47=null;
        Token OD_KW49=null;
        Token IDENT50=null;
        Token PG51=null;
        Token PD53=null;
        vslParser.expression_return expression28 = null;

        vslParser.tab_elem_return tab_elem29 = null;

        vslParser.expression_return expression31 = null;

        vslParser.expression_return expression33 = null;

        vslParser.print_list_return print_list35 = null;

        vslParser.read_list_return read_list37 = null;

        vslParser.expression_return expression39 = null;

        vslParser.statement_return statement41 = null;

        vslParser.statement_return statement43 = null;

        vslParser.expression_return expression46 = null;

        vslParser.statement_return statement48 = null;

        vslParser.argument_list_return argument_list52 = null;

        vslParser.block_return block54 = null;

